// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoComplete /> Snapshots should match with a full width component 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c2 {
  width: 100%;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #231B22;
}

.c2:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c2:hover fieldset,
.c2:focus-within fieldset {
  border-color: #231B22;
}

.c4 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #231B22;
}

.c4:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c4:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c6 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c3 {
  z-index: 1;
}

.c0 {
  position: relative;
  width: 100%;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="c4"
          id="downshift-1-input"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <fieldset
          class="c6"
        >
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Label
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with default component 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c2 {
  width: 320px;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #231B22;
}

.c2:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c2:hover fieldset,
.c2:focus-within fieldset {
  border-color: #231B22;
}

.c4 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #231B22;
}

.c4:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c4:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c6 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c3 {
  z-index: 1;
}

.c0 {
  position: relative;
  width: auto;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="c4"
          id="downshift-0-input"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <fieldset
          class="c6"
        >
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Label
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with full width options list 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c2 {
  width: 100%;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #231B22;
}

.c2:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c2:hover fieldset,
.c2:focus-within fieldset {
  border-color: #231B22;
}

.c4 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #231B22;
}

.c4:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c4:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4 + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c6 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 1000px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c3 {
  z-index: 1;
  border-color: #231B22;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 fieldset {
  border-color: #231B22;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 label {
  color: #231B22;
  font-weight: 700;
}

.c3 legend {
  font-weight: 700;
}

.c0 {
  position: relative;
  width: 100%;
}

.c9 {
  position: absolute;
  margin: 0;
  padding: 0;
  z-index: 999;
  top: 52px;
  width: 100%;
  max-height: 312px;
  box-sizing: border-box;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #231B22;
  border-top-width: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  list-style: none;
  cursor: pointer;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  outline: none;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c10:hover {
  background-color: #F5F5FA;
}

.c11 {
  background: transparent;
  color: inherit;
  font-weight: 700;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    aria-owns="downshift-3-menu"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-3-menu"
          aria-labelledby="downshift-3-label"
          autocomplete="off"
          class="c4"
          id="downshift-3-input"
          value="s"
        />
        <label
          class="c5"
        >
          Label
        </label>
        <fieldset
          class="c6"
        >
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Label
            </span>
          </legend>
        </fieldset>
        <svg
          height="20"
          role="button"
          tabindex="0"
          width="20"
        />
      </div>
    </div>
    <ul
      aria-labelledby="downshift-3-label"
      class="c9"
      id="downshift-3-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="c10"
        id="downshift-3-item-0"
        role="option"
      >
        
        <mark
          class="c11"
        >
          s
        </mark>
        econd
      </li>
      <li
        aria-selected="false"
        class="c10"
        id="downshift-3-item-1"
        role="option"
      >
        fir
        <mark
          class="c11"
        >
          s
        </mark>
        t
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with options list 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c2 {
  width: 320px;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #231B22;
}

.c2:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c2:hover fieldset,
.c2:focus-within fieldset {
  border-color: #231B22;
}

.c4 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #231B22;
}

.c4:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c4:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4 + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c6 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 1000px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c3 {
  z-index: 1;
  border-color: #231B22;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 fieldset {
  border-color: #231B22;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 label {
  color: #231B22;
  font-weight: 700;
}

.c3 legend {
  font-weight: 700;
}

.c0 {
  position: relative;
  width: auto;
}

.c9 {
  position: absolute;
  margin: 0;
  padding: 0;
  z-index: 999;
  top: 52px;
  width: 320px;
  max-height: 312px;
  box-sizing: border-box;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #231B22;
  border-top-width: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  list-style: none;
  cursor: pointer;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  outline: none;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c10:hover {
  background-color: #F5F5FA;
}

.c11 {
  background: transparent;
  color: inherit;
  font-weight: 700;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-2-menu"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          class="c4"
          id="downshift-2-input"
          value="s"
        />
        <label
          class="c5"
        >
          Label
        </label>
        <fieldset
          class="c6"
        >
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Label
            </span>
          </legend>
        </fieldset>
        <svg
          height="20"
          role="button"
          tabindex="0"
          width="20"
        />
      </div>
    </div>
    <ul
      aria-labelledby="downshift-2-label"
      class="c9"
      id="downshift-2-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="c10"
        id="downshift-2-item-0"
        role="option"
      >
        
        <mark
          class="c11"
        >
          s
        </mark>
        econd
      </li>
      <li
        aria-selected="false"
        class="c10"
        id="downshift-2-item-1"
        role="option"
      >
        fir
        <mark
          class="c11"
        >
          s
        </mark>
        t
      </li>
    </ul>
  </div>
</div>
`;
